Update configuration; Add autogenerated contract.
