# Mvc.Experiments.Api/Controllers/TestApiController.cs
@@ -1,6 +1,6 @@
 ﻿using System.Threading.Tasks;
 using Microsoft.AspNetCore.Mvc;
-using Mvc.Experiments.Api.Models;
+using Microsoft.AspNetCore.Mvc.ModelBinding;
 using Mvc.Experiments.Domain.Interfaces;
 
 namespace Mvc.Experiments.Api.Controllers
@@ -8,11 +8,9 @@ namespace Mvc.Experiments.Api.Controllers
     /// <summary>
     /// Summary of the 'TestApi' controller (v1)
     /// </summary>
-    [ApiVersion("1.0")]
-    [Route("api/v1/[controller]")]
     [Produces("application/json")]
     [ApiController]
-    public class TestApiController : ControllerBase
+    public class TestApiController : TestApiControllerBase
     {
         private readonly ITestService _testService;
         public TestApiController(ITestService testService)
@@ -21,16 +19,12 @@ namespace Mvc.Experiments.Api.Controllers
         }
 
         /// <summary>
-        /// Description of the method [1] from Symmary (xml comments) locally
+        /// Description of the method [1] from Symmary (xml comments) locally v1
         /// </summary>
         /// <returns>string</returns>
-        [HttpPost]
-        [Route("gettest1")]
-        [ProducesResponseType(200)]
-        [ProducesResponseType(500, Type = typeof(string))]
-        public async Task<PostTestMethod1Response> GetTestMethod1(PostTestMethod1Request request)
+        public async override Task<PostTestMethod1Response> Gettest1([BindRequired, FromBody] PostTestMethod1Request type)
         {
-            var result = _testService.GetTestMethod1(request.Param1);
+            var result = _testService.GetTestMethod1(type.Param1);
             return await Task.FromResult(
                 new PostTestMethod1Response()
                 {
@@ -39,13 +33,10 @@ namespace Mvc.Experiments.Api.Controllers
         }
 
         /// <summary>
-        /// Description of the method [2] from Symmary (xml comments) locally
+        /// Description of the method [2] from Symmary (xml comments) locally v1
         /// </summary>
         /// <returns>string</returns>
-        [HttpPost]
-        [Route("gettest2")]
-        [ProducesResponseType(200)]
-        public async Task<GetTestMethod2Response> GetTestMethod2()
+        public async override Task<GetTestMethod2Response> Gettest2()
         {
             var result = _testService.GetTestMethod2();
             return await Task.FromResult(
@@ -54,6 +45,5 @@ namespace Mvc.Experiments.Api.Controllers
                     Result = result
                 });
         }
-
     }
 }
